# iTermX

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: android.yml  build-linux.yml  build-macos-arm.yml  build-macos-intel.yml  build-windows.yml  build.yml
public/: sponsors.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs  state.rs
src-tauri/src/commands/: backup.rs  fs.rs  highlight.rs  history.rs  mod.rs  proxy.rs  server.rs  snippet.rs  system.rs  vault.rs
src-tauri/src/commands/fs/: commands.rs  filesystem.rs  mod.rs  session.rs  sftp_impl.rs
src-tauri/src/commands/monitor/: cpu.rs  disk.rs  info.rs  memory.rs  mod.rs  network.rs
src-tauri/src/commands/ssh/: core.rs  mod.rs  state.rs
src-tauri/src/models/: highlight.rs
src-tauri/src/services/: highlight.rs
src/components/common/: ActionMenu.tsx  ActionToolbar.tsx  BaseModal.tsx  CommonTagSelector.tsx  ConfirmDialog.tsx  ContextMenu.tsx  CustomButton.tsx  CustomInput.tsx  GlassTooltip.tsx  (+5 more)
src/hooks/: useLocalImage.ts
src/lib/: animation.ts
src/locales/: i18n.ts
src/services/: api.ts
src/store/: useAppStore.ts  useFileStore.ts  useKeyStore.ts  useMonitorStore.ts  useProxyStore.ts  useSessionCredentialStore.ts  useSettingsStore.ts  useTerminalStore.ts  useTransferStore.ts
src/styles/: index.css  tauri.css
src/utils/: format.ts  permission.ts
src/windows/: FileEditorPage.tsx
(+193 files in other folders)
