[package]
name = "PiTerm"
version = "1.0.1"
description = "A Tauri App"
authors = ["na4codex"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "piterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.5.5", features = ["tray-icon"] }

tauri-plugin-opener = "2.5.1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-fs = "2.4.5"
tauri-plugin-dialog = "2.5.1"
tauri-plugin-sql = "2.3.2"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-os = "2.3.2"
tauri-plugin-clipboard-manager = "2.3.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
ssh2 = "0.9.4"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.30"
aes-gcm = "0.10"
pbkdf2 = "0.12"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
base64 = "0.21"
sqlx = { version = "0.8", features = [ "sqlite", "runtime-tokio" ] }
chrono = { version = "0.4", features = ["serde"] }
font-kit = "0.11"
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
zip = "0.6"
walkdir = "2"
regex = "1"
urlencoding = "2"

